# win32_window_monitor

./: .readthedocs.yaml  LICENSE  README.md  README.rst  event_ids_gen_prompt.txt  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt  requirements_update.bat
tests/: event_ids_test.py  ids_test.py
win32_window_monitor/: __init__.py  _win32_window_monitor.pyx  event_ids.py  ids.py  main.py  main_usage_example.py  watch_active_window.py  win32api.py
