[tool.poetry]
name = "win32-window-monitor"
version = "0.1.0"
license = "MIT"
description = "Monitor when the focused window or its title change on Windows. Invokes the callback with windows HWND, pid, and executable path."
authors = ["Baptiste Lepilleur <baptiste.lepilleur@gmail.com>"]
readme = "README.md"
# TODO
#keywords = []
# See https://pypi.org/classifiers/ for all classifiers
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows :: Windows Vista",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]


[tool.poetry.dependencies]
python = "^3.8"
pywin32="^306"

[tool.poetry.dev-dependencies]
# Release
twine = "^4.0.2"
# Testing
pytest = "^7.3.2"
coverage = "^7.3.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

